--- a/profile.html
+++ b/profile.html
@@ -3,101 +3,108 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Profile — Nepali Bazar</title>
+  <title>Profile — Nepali Bazar</title>
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    /* small tweak for layout parity with index but no hero */
+    .profile-header-note { color: var(--muted); margin-bottom: 8px; }
+  </style>
   <script src="js/config.js"></script>
   <script src="js/product-data.js"></script>
 </head>
 <body class="dark-bg">
-
-  <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
       <a href="index.html" class="brand">
         <div class="logo">NB</div>
         <div class="brand-text">
           <div class="brand-title"><span class="site-name"></span></div>
-          <div class="brand-sub">Local Marketplace — Profile</div>
+          <div class="brand-sub">Your profile & listings</div>
         </div>
       </a>
 
       <nav class="nav">
+        <input id="global-search-top" placeholder="Search items..." class="search-input" />
+        <a href="index.html" class="nav-link">Home</a>
         <a href="products.html" class="nav-link">Products</a>
         <a href="sell.html" class="nav-link cta">Sell</a>
-        <a href="profile.html" class="nav-link active">Profile</a>
-        <span id="user-info" class="nav-link"></span>
+        <a href="login.html" id="login-link" class="nav-link">Login</a>
+        <span id="user-info" class="nav-link" style="display:none;">
+          <span id="username-display"></span> | <a href="#" id="logout-btn">Logout</a>
+        </span>
+        <a id="profile-link" class="nav-link" href="profile.html" style="display:none;">Profile</a>
       </nav>
     </div>
   </header>
 
-  <!-- Profile Section -->
   <main class="container main-grid">
     <section class="content">
       <div class="section-head">
-        <h2>My Listings</h2>
-        <p class="muted">Here are the items you have listed on Nepali Bazar.</p>
+        <h2>Your Listings</h2>
+        <div class="controls">
+          <a class="btn btn-primary" href="sell.html">Create Listing</a>
+        </div>
       </div>
-      <div id="profile-grid" class="card-grid"></div>
+
+      <p class="profile-header-note muted small">This page shows listings posted by you. From here you can remove only your items (admin can remove any).</p>
+
+      <div id="profile-listings" class="card-grid"></div>
     </section>
 
     <aside class="sidebar">
+      <div class="ad-slot"></div>
+      <div class="ad-slot small"></div>
+
       <div class="sidebar-card">
-        <h3>Quick Actions</h3>
-        <a class="btn btn-primary" href="sell.html">Post New Item</a>
+        <h3>Profile actions</h3>
+        <p class="muted small">Signed in as <strong id="profile-username"></strong></p>
+        <p class="muted small">Only items you posted are shown here. Admin (sohaum) can delete all items.</p>
       </div>
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div>© <span id="year"></span> <span class="site-name"></span>. Made with ❤️ in Nepal.</div>
+      <div>© <span id="year"></span> <span class="site-name"></span></div>
       <div class="muted">Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a></div>
     </div>
   </footer>
 
-  <!-- Scripts -->
+  <!-- Optional modal placeholder used by app.js -->
+  <div id="nb-modal" class="nb-modal" style="display:none;">
+    <div class="nb-modal-content">
+      <button class="nb-modal-close">✕</button>
+      <div id="nb-modal-body"></div>
+    </div>
+  </div>
+
   <script src="js/app.js"></script>
   <script>
+    // basic setup for profile page
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
-    // Profile grid rendering
-    document.addEventListener('DOMContentLoaded', function(){
-      const grid = document.getElementById("profile-grid");
-      const user = localStorage.getItem("nb_logged_in_user");
-
+    // enforce login
+    (function(){
+      const user = localStorage.getItem('nb_logged_in_user');
       if(!user){
-        grid.innerHTML = '<div class="muted">You must be logged in to view your profile.</div>';
+        alert('Please log in to access your profile.');
+        window.location.href = 'login.html';
         return;
       }
+      document.getElementById('profile-username').textContent = user;
 
-      // fetch products
-      const all = (function(){
-        try {
-          const raw = localStorage.getItem(window.LOCAL_STORAGE_KEY || "nb_products_v1");
-          return raw ? JSON.parse(raw) : (window.NB_PRODUCTS || []);
-        } catch(e){ return []; }
-      })();
+      // show profile link in header (app.js will also ensure header UI)
+      const p = document.getElementById('profile-link'); if(p) p.style.display = 'inline';
 
-      const myAds = all.filter(p => p.seller === user);
-
-      if(myAds.length === 0){
-        grid.innerHTML = '<div class="muted">You have not posted any listings yet.</div>';
-        return;
-      }
-
-      // Render cards
-      myAds.forEach(p=>{
-        const card = window.createCard ? window.createCard(p) : null;
-        if(card) grid.appendChild(card);
-      });
-
-      // user info text
-      const userInfo = document.getElementById("user-info");
-      if(userInfo) userInfo.textContent = "Logged in as " + user;
-    });
+      // render profile listings (app.js exposes renderProfilePage)
+      if(window.renderProfilePage) window.renderProfilePage();
+    })();
   </script>
 </body>
 </html>
