--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="logo">NB</div>
         <div class="brand-text">
           <div class="brand-title"><span class="site-name">NEPALI BAZAR</span></div>
-          <div class="brand-sub">Local Marketplace</div>
+          <div class="brand-sub">Local Marketplace — Game Mode</div>
         </div>
       </a>
 
@@ -39,11 +39,10 @@
     </div>
   </header>
 
-  <!-- Hero section -->
+  <!-- Animated hero -->
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="container hero-inner">
-      <!-- Left side: text -->
       <div class="hero-left">
         <h1 class="hero-title"><span class="accent site-name">NEPALI BAZAR</span><br>Buy • Sell • Connect — Locally</h1>
         <p class="hero-sub">A neon-lit marketplace for students, workers & creators. Upload your item, add contact details and photos — buyers contact you directly.</p>
@@ -53,47 +52,42 @@
         </div>
       </div>
 
-      <!-- Right side: pinned ad slot -->
-      <div class="hero-right" id="hero-ad-slot">
-        <!-- Default fallback RTX ad -->
-        <div class="hero-card neon-card" id="hero-fallback">
-          <img src="assets/images/hero-1.jpg" alt="Featured ad" onerror="this.style.display='none'"/>
+      <div class="hero-right">
+        <div class="hero-card neon-card">
+          <img src="assets/images/hero-1.jpg" alt="hero image" onerror="this.style.display='none'"/>
           <div class="meta">Featured: Gaming Laptop — Rs. 85,000</div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Intro + Pinned Ad section -->
-  <section class="container intro-pinned">
-    <div class="intro-left">
-      <h2>Welcome to Nepali Bazar</h2>
-      <p>Your trusted local marketplace to buy, sell, and connect with people around you. Whether you’re a student, professional, or entrepreneur — Nepali Bazar makes trading easy and safe.</p>
-    </div>
-    <div class="intro-right">
-      <div id="pinned-ad-slot" class="hero-card neon-card" style="display:none;"></div>
-    </div>
-  </section>
-
-  <!-- Main area -->
+  <!-- Main area: featured + grid -->
   <main class="container main-grid">
     <section class="content">
       <div class="section-head">
         <h2>Latest Listings</h2>
         <div class="controls">
-          <select id="filter-category" class="select"></select>
+          <select id="filter-cat" class="select"></select>
+          <select id="sort-by" class="select">
+            <option value="new">Newest</option>
+            <option value="price-asc">Price: Low → High</option>
+            <option value="price-desc">Price: High → Low</option>
+          </select>
         </div>
       </div>
 
       <div id="home-grid" class="card-grid"></div>
-      <div id="load-more" class="load-more-wrap">
-        <button id="load-more-btn" class="btn">Load more</button>
-      </div>
+      <div id="load-more" class="load-more-wrap"><button id="load-more-btn" class="btn">Load more</button></div>
     </section>
 
     <aside class="sidebar">
-      <div class="ad-slot"></div>
-      <div class="ad-slot small"></div>
+      <div class="ad-slot">
+        <img src="assets/images/ad1.jpg" alt="Ad 1" onerror="this.style.display='none'"/>
+      </div>
+
+      <div class="ad-slot small">
+        <img src="assets/images/ad2.jpg" alt="Ad 2" onerror="this.style.display='none'"/>
+      </div>
 
       <div class="sidebar-card">
         <h3>Post quickly</h3>
@@ -103,98 +97,132 @@
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div>© <span id="year"></span> <span class="site-name"></span>. Made by Sohaum Mainali - YJ</div>
+      <div>© <span id="year"></span> <span class="site-name"></span>. Made with ❤️ in Nepal.</div>
       <div class="muted">Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a></div>
     </div>
   </footer>
 
-  <!-- Modal -->
-  <div id="nb-modal" class="nb-modal">
-    <div class="nb-modal-content">
-      <button class="nb-modal-close">✕</button>
-      <div id="nb-modal-body"></div>
-    </div>
-  </div>
-
-  <!-- Scripts -->
   <script src="js/app.js"></script>
-  <script>
-    // Year + site name
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+<script>
+  // Use the correct global array
+let products = window.NB_PRODUCTS || [];
 
-    // Logged-in state
-    const loggedUser = localStorage.getItem("nb_logged_in_user");
-    const loginLink = document.getElementById("login-link");
-    const userInfo = document.getElementById("user-info");
-    const usernameDisplay = document.getElementById("username-display");
-    const logoutBtn = document.getElementById("logout-btn");
+// --- Render latest listings with delete button for Sohaum only ---
+const homeGrid = document.getElementById("home-grid");
 
-    if (loggedUser) {
-      loginLink.style.display = "none";
-      userInfo.style.display = "inline";
-      usernameDisplay.textContent = loggedUser;
-    } else {
-      loginLink.style.display = "inline";
-      userInfo.style.display = "none";
+function renderHomeListings() {
+  homeGrid.innerHTML = ""; // clear previous
+  products.forEach(product => {
+    const card = document.createElement("div");
+    card.className = "product-card";
+
+    card.innerHTML = `
+      <img src="${product.images?.[0] || 'assets/images/placeholder.jpg'}" alt="product image">
+      <h3>${product.title}</h3>
+      <p>Price: Rs. ${product.price}</p>
+      <p>Seller: ${product.seller}</p>
+      <p>Location: ${product.location}</p>
+      <p>${product.description}</p>
+      ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+    `;
+
+    if(loggedUser === "sohaum") {
+      const btn = card.querySelector(".delete-btn");
+      if(btn) {
+        btn.addEventListener("click", () => {
+          if(confirm("Are you sure you want to delete this listing?")) {
+            products = products.filter(p => p.id !== product.id);
+            window.NB_PRODUCTS = products; // update global
+            localStorage.setItem("nb_products_v1", JSON.stringify(products)); // persist
+            renderHomeListings();
+          }
+        });
+      }
     }
 
-    logoutBtn.addEventListener("click", function(e){
-      e.preventDefault();
-      localStorage.removeItem("nb_logged_in_user");
-      location.reload();
+    homeGrid.appendChild(card);
+  });
+}
+
+renderHomeListings();
+
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+
+  // Logged-in state
+  const loggedUser = localStorage.getItem("nb_logged_in_user");
+  const loginLink = document.getElementById("login-link");
+  const userInfo = document.getElementById("user-info");
+  const usernameDisplay = document.getElementById("username-display");
+  const logoutBtn = document.getElementById("logout-btn");
+
+  if(loggedUser){
+    loginLink.style.display = "none";
+    userInfo.style.display = "inline";
+    usernameDisplay.textContent = loggedUser;
+  } else {
+    loginLink.style.display = "inline";
+    userInfo.style.display = "none";
+  }
+
+  logoutBtn.addEventListener("click", function(e){
+    e.preventDefault();
+    localStorage.removeItem("nb_logged_in_user");
+    location.reload();
+  });
+
+  // --- Render latest listings with delete button for Sohaum only ---
+  const homeGrid = document.getElementById("home-grid");
+
+  // Use global products array from product-data.js
+  let products = window.NB_PRODUCTS || [];
+
+  // Save to localStorage function
+  function saveProducts() {
+    window.NB_PRODUCTS = products;
+    try {
+      localStorage.setItem(window.LOCAL_STORAGE_KEY || "nb_products_v1", JSON.stringify(products));
+    } catch(e) {
+      console.warn("Failed saving products", e);
+    }
+  }
+
+  function renderHomeListings() {
+    homeGrid.innerHTML = ""; // clear previous
+    products.forEach(product => {
+      const card = document.createElement("div");
+      card.className = "product-card";
+
+      card.innerHTML = `
+        <img src="${product.images && product.images[0] ? product.images[0] : 'assets/images/placeholder.jpg'}" alt="product image">
+        <h3>${product.title}</h3>
+        <p>Price: Rs. ${product.price}</p>
+        <p>Seller: ${product.seller}</p>
+        <p>Location: ${product.location}</p>
+        <p>${product.description}</p>
+        ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+      `;
+
+      // Add delete functionality for Sohaum only
+      if(loggedUser === "sohaum") {
+        card.querySelector(".delete-btn").addEventListener("click", () => {
+          if(confirm("Are you sure you want to delete this listing?")){
+            products = products.filter(p => p.id !== product.id);
+            saveProducts();
+            renderHomeListings();
+          }
+        });
+      }
+
+      homeGrid.appendChild(card);
     });
+  }
 
-    // Load-more button
-    let homeLimit = 8;
-    const btn = document.getElementById("load-more-btn");
-    if(btn){
-      btn.addEventListener("click", ()=>{
-        homeLimit += 8;
-        if(window.renderHomeGrid){
-          window.renderHomeGrid(homeLimit);
-        }
-      });
-    }
+  renderHomeListings();
+</script>
 
-    // Populate category filter
-    const catSelect = document.getElementById("filter-category");
-    if (catSelect && window.NB_PRODUCTS) {
-      const categories = [...new Set(window.NB_PRODUCTS.map(p => p.category))];
-      catSelect.innerHTML = `<option value="">All Categories</option>` +
-        categories.map(c => `<option value="${c}">${c}</option>`).join("");
-    }
-
-    // Modal open/close logic
-    const modal = document.getElementById("nb-modal");
-    const modalBody = document.getElementById("nb-modal-body");
-    const modalClose = modal.querySelector(".nb-modal-close");
-
-    window.NB_OPEN_MODAL = (html) => {
-      modalBody.innerHTML = html;
-      modal.style.display = "flex";
-    };
-    function closeModal(){
-      modal.style.display = "none";
-      modalBody.innerHTML = "";
-    }
-    modalClose.addEventListener("click", closeModal);
-    modal.addEventListener("click", e => { if(e.target === modal) closeModal(); });
-    document.addEventListener("keydown", e => { if(e.key === "Escape") closeModal(); });
-
-    // Render pinned ad if exists
-    const pinnedAd = localStorage.getItem("nb_pinned_ad");
-    const pinnedSlot = document.getElementById("pinned-ad-slot");
-    if(pinnedAd){
-      pinnedSlot.style.display = "block";
-      pinnedSlot.innerHTML = pinnedAd;
-      pinnedSlot.addEventListener("click", ()=>{
-        NB_OPEN_MODAL(pinnedAd);
-      });
-    }
-  </script>
+  <script src="js/nb-fixes.js"></script>
 </body>
 </html>
